# convert-audio

./: .gitignore  README.md  install_gpucheck.py  pyproject.toml
assets/: 20260114 Miles Delinquency Review.txt  Test test 8k 20260115.txt
src/convert_audio/: __init__.py  cli.py  transcribe.py
tests/: __init__.py  test_cli.py  test_transcribe.py
